<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_45">45</string>
    <string name="fragment_stats_hp">Hp</string>
    <string name="fragment_stats_attack">Ataque</string>
    <string name="fragment_stats_defense">Defensa</string>
    <string name="fragment_stats_speed">Velocidad</string>
</resources>