<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/fragment_stats_hp"
        android:padding="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_stats_hp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/fragment_stat_hp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:text="@string/_45"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/fragment_stats_attack"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_stats_attack"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/fragment_stat_attack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:text="49"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/fragment_stats_defense"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_stats_defense"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/fragment_stat_defense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:text="49"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/fragment_stats_speed"
        android:orientation="horizontal"
        android:padding="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_stats_speed"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/fragment_stat_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:text="65"/>
    </LinearLayout>


</LinearLayout>